# CounterStrikeHelper

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/: ai_client.h  config.h  discord_client.h  httplib.h  leetify_client.h  match_data.h  openai_client.h  persistence.h
src/: ai_client.cpp  config.cpp  discord_client.cpp  leetify_client.cpp  main.cpp  match_data.cpp  openai_client.cpp
